k8s/services/opensearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: shopno-data
  labels:
    app.kubernetes.io/name: opensearch
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: opensearch
