k8s/services/opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch
  namespace: shopno-data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - opensearch.shopnoltd.com
      secretName: opensearch-tls
  rules:
    - host: opensearch.shopnoltd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch
                port:
                  number: 80
